Adds some JCL dependencies required by html4j